fixed the spacing

--- a/css/colors.css
+++ b/css/colors.css
@@ -26,4 +26,5 @@
     --White:#ffffff;
     --headerp:#4B5563;
     --Nobel:#B9B7B6;
+    --testi:#6F6C90;
 }
