--- a/css/home.css
+++ b/css/home.css
@@ -236,6 +236,7 @@ header{
     position: relative;
     top: 2rem;
     margin-bottom: 2rem;
+    margin-top: 100px;
 }
 .testi-txt p{
     color: var(--cloud);
